fix footnote duplication

--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -264,19 +264,13 @@ Overall, relative changes in the steady state of the system are less than the eq
 The dynamic behavior of the model demonstrates its power to integrate multiple environmental forcings simultaneously. Here we present several scenarios that demonstrate the model's ability to reproduce complex phenomena that have been observed in corals.
 
 ## Seasonal variability
-Symbiont densities and coral growth rates are known to vary seasonally, representing an integrated response to changes in a suite of environmental factors. Light in particular is a strong driver of these trends [@Stimson:1997p3837; @Brown:1999p3534; @Fagoonee:1999p4136; @Fitt:2000p3792], with high light associated with lower symbiont abundance and reduced tissue biomass. The role of light in driving seasonal changes in symbiont density was demonstrated nicely by @Stimson:1997p3837, who also found that experimental nutrient-enrichment amplified the light-driven seasonal oscillation. Using the levels of light and nutrients from this study as inputs, the model reproduces this observed interaction among environmental factors (Fig. 5), and also provides the mechanism: as increasing light in summer decreases carbon fixation due to photooxidative stress, symbionts grow slower than the host, leading to decreasing S:H ratios. Under nutrient enrichment, this effect is more pronounced, as CO~2~-limitation (due to higher symbiont standing stocks) causes mild bleaching that results in a similar summertime minimum S:H as the ambient nutrient case ('physiological bleaching' *sensu* @Fitt:2001p832). Decreasing light into winter then alleviates the photooxidative stress constraints on carbon fixation, such that nitrogen constrains the S:H ratio, explaining why S:H increases more when DIN is enriched (Fig. S8). The model of @Muller would also predict higher S:H ratios in winter if light became limiting to photosynthesis, but this is distinct from the mechanism here, in which stress in the summer drives a reduction in S:H. These can be distinguished as follows:
-
-winter increase in S:H as light limits carbon fixation - decreases growth in winter
-summer decrease in S:H as photo-oxidative stress limits carbon fixation - decreases growth in summer
-
-
-under high light in summer, photooxidative stress decreases symbiont biomass and increases carbon-limitation of host growth regardless of nutrient status; when light is reduced in winter, growth and symbiont biomass become constrained instead by nitrogen, and therefore increase more when DIN is enriched (Fig. S8).
+Symbiont densities and coral growth rates are known to vary seasonally, representing an integrated response to changes in a suite of environmental factors. Light in particular is a strong driver of these trends [@Stimson:1997p3837; @Brown:1999p3534; @Fagoonee:1999p4136; @Fitt:2000p3792], with high light associated with lower symbiont abundance and reduced tissue biomass. The role of light in driving seasonal changes in symbiont density was demonstrated nicely by @Stimson:1997p3837, who also found that experimental nutrient-enrichment amplified the light-driven seasonal oscillation. Using the levels of light and nutrients from this study as inputs, the model reproduces this observed interaction among environmental factors (Fig. 5), and also provides the mechanism: as increasing light in summer decreases carbon fixation due to photooxidative stress, symbionts grow slower than the host, leading to decreasing S:H ratios. Under nutrient enrichment, this effect is more pronounced, as CO~2~-limitation (due to higher symbiont standing stocks) causes mild bleaching that results in a similar summertime minimum S:H as the ambient nutrient case ('physiological bleaching' *sensu* @Fitt:2001p832). Decreasing light into winter then alleviates the photooxidative stress constraints on carbon fixation, such that nitrogen constrains the S:H ratio, explaining why S:H increases more when DIN is enriched (Fig. S8).
 
 ![Light-driven seasonal dynamics of symbiont abundance and coral growth. Light input (upper panel) was designed as a sinusoidal curve with a period of one year, with maximum and minimum values of 44 and 22 mol photons m^-2^ d^-1^, based on @Stimson:1997p3837. The dynamic behavior of symbiont to host biomass ratio (middle panel) and the specific growth rate of host biomass (lower panel) show seasonal oscillations that are greater in magnitude under higher nutrients (1e-5 mol N L^-1^; dashed lines) relative to lower nutrients (1e-7 mol N L^-1^; solid lines), consistent with the findings of @Stimson:1997p3837. Prey density was set at 1e-5 CmolX L^-1^.](../img/Fig5.png)
 
-The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer[^2], consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone may drive seasonal dynamics in the ways discussed[^2], temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism; thus, the relative magnitude of fluctuation in temperature, light, and other factors may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here (Fig. 5) is consistent with experimental and field observations for corals, and demonstrates the power of this model to predict dynamic behavior that mechanistically integrates multiple environmental drivers.
+The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer[^3], consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone may drive seasonal dynamics in the ways discussed[^3], temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism; thus, the relative magnitude of fluctuation in temperature, light, and other factors may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here (Fig. 5) is consistent with experimental and field observations for corals, and demonstrates the power of this model to predict dynamic behavior that mechanistically integrates multiple environmental drivers.
 
-[^2]: at the light levels indicated in @Stimson:1997p3837. Note that if light levels were reduced throughout the year (e.g. for a coral at greater depth) such that light did not cause photo-oxidative stress in summer but became limiting to photosynthesis in winter, the S:H ratio would still increase in winter, but growth would decrease; the latter scenario is predicted both by the present model as well as that of @Muller:2009io, since photo-oxidative stress does not become relevant.
+[^3]: at the light levels indicated in @Stimson:1997p3837. Note that if light levels were reduced throughout the year (e.g. for a coral at greater depth) such that light did not cause photo-oxidative stress in summer but became limiting to photosynthesis in winter, the S:H ratio would still increase in winter, but growth would decrease; the latter scenario is predicted both by the present model as well as that of @Muller:2009io, since photo-oxidative stress does not become relevant.
 
 ## Coral bleaching and recovery
 Coral bleaching is the stress-induced loss of symbiotic algae from coral tissues, which can occur in response to a variety of environmental stressors. In most cases, coral bleaching is thought to begin with photooxidative stress in symbiont photosynthesis [@Lesser:1997p3587], which triggers a cascade of events leading to symbiont expulsion [@Weis:2008p944]. As symbionts are expelled, the host receives less fixed carbon, which may then compromise its ability to activate CCMs that deliver CO~2~ to photosynthesis [@Wooldridge:2013tj]. Increasing CO~2~-limitation for remaining symbionts, along with an amplified internal light environment due to reduced self-shading [@Enriquez:2005p142], may further exacerbate photooxidative stress and accelerate symbiont expulsion, driving the coral into a bleached state.
