--- a/JTB_supp/JTB_supp.Rmd
+++ b/JTB_supp/JTB_supp.Rmd
@@ -734,7 +734,8 @@ with(run2, {
 -----
 
 # Figure S9
-```{r runFigS9, cache=T, include=F, eval=T}
+```{r FigS9, cache=T, fig.width=7, fig.height=7, echo=F, message=F, eval=T, fig.cap="**Fig. S9. Hysteresis under different nutrient and feeding regimes.** This figure accompanies Fig. 2 in the main text. These figures show steady state S:H biomass ratios in constant environments with varying DIN and food (X) levels, with initial S:H biomass values of either 0.1 or 0.0001. Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state."}
+
 # Set up cluster for parallel processing
 cl <- makeCluster(detectCores())  # Initiate cluster
 registerDoParallel(cl)
@@ -770,9 +771,8 @@ res1 <- cbind(input, output1)
 res2 <- cbind(input, output2)
 res3 <- cbind(input, output3)
 res4 <- cbind(input, output4)
-```
 
-```{r plotFigS9, cache=T, fig.width=7, fig.height=7, echo=F, message=F, eval=T, fig.cap="**Fig. S9. Hysteresis under different nutrient and feeding regimes.** This figure accompanies Fig. 2 in the main text. These figures show steady state S:H biomass ratios in constant environments with varying DIN and food (X) levels, with initial S:H biomass values of either 0.1 or 0.0001. Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state."}
+
 # Create plot
 par(mfrow=c(2,2), mar=c(3,3,1,1), mgp=c(1.5,0.5,0), tcl=-0.025)
 
