--- a/JTB_supp/JTB_supp.Rmd
+++ b/JTB_supp/JTB_supp.Rmd
@@ -734,7 +734,7 @@ with(run2, {
 -----
 
 # Figure S9
-```{r FigS9, cache=T, fig.width=7, fig.height=7, echo=F, message=F, eval=T, fig.cap="**Fig. S9. Hysteresis under different nutrient and feeding regimes.** This figure accompanies Fig. 2 in the main text. These figures show steady state S:H biomass ratios in constant environments with varying DIN and food (X) levels, with initial S:H biomass values of either 0.1 or 0.0001. Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state."}
+```{r FigS9, cache=T, fig.width=7, fig.height=7, echo=F, message=F, eval=T, render=NULL, fig.cap="**Fig. S9. Hysteresis under different nutrient and feeding regimes.** This figure accompanies Fig. 2 in the main text. These figures show steady state S:H biomass ratios in constant environments with varying DIN and food (X) levels, with initial S:H biomass values of either 0.1 or 0.0001. Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state."}
 
 # Set up cluster for parallel processing
 cl <- makeCluster(detectCores())  # Initiate cluster
@@ -783,7 +783,7 @@ text(38, 0.435, labels="init. S:H", xpd=T, cex=0.7, srt=90)
 text(46, c(0.42,0.45), labels=c("0.1", "0.0001"), xpd=T, pos=2, cex=0.7)
 text(50, 0.49, labels=c("Steady state growth"), xpd=T, cex=0.7)
 text(c(48,53), 0.47, labels=c("pos.", "neg."), xpd=T, cex=0.7)
-apply(res1, 1, FUN=function(x) {
+p1 <- apply(res1, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
@@ -800,7 +800,7 @@ apply(res1, 1, FUN=function(x) {
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.5), xlab="Light", ylab="Steady state S:H ratio")
 title("DIN=1e-7 mol/L; X=1e-6 mol/L")
-apply(res2, 1, FUN=function(x) {
+p2 <- apply(res2, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
@@ -817,7 +817,7 @@ apply(res2, 1, FUN=function(x) {
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.5), xlab="Light", ylab="Steady state S:H ratio")
 title("DIN=1e-6 mol/L; X=2e-6 mol/L")
-apply(res3, 1, FUN=function(x) {
+p3 <- apply(res3, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
@@ -834,7 +834,7 @@ apply(res3, 1, FUN=function(x) {
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.5), xlab="Light", ylab="Steady state S:H ratio")
 title("DIN=1e-6 mol/L; X=4e-6 mol/L")
-apply(res4, 1, FUN=function(x) {
+p4 <- apply(res4, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
